Rename API and add to docs
